crates/rs_html_parser/tests/snapshots/html5lib_test3_test__tests__lt_excl_mark_doctype_a_public_u0008.snap
---
source: crates/rs_html_parser/tests/html5lib_test3_test.rs
expression: "parser_test(r####\"<!DOCTYPE a PUBLIC\b\"####)"
---
[
    Token {
        data: "DOCTYPE a PUBLIC\u{8}",
        attrs: None,
        kind: Text,
        is_implied: false,
    },
]
